// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.BlockLayout.Line props testing checkGrammar 1`] = `
<Line
  borderRadius={null}
  checkGrammar={true}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing checkGrammar 2`] = `
<Line
  borderRadius={null}
  checkGrammar={false}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing checkGrammar 3`] = `
<Line
  borderRadius={null}
  checkGrammar={false}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing checkGrammar 4`] = `
<Line
  borderRadius={null}
  checkGrammar={true}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing checkHighlight 1`] = `
<Line
  borderRadius={null}
  checkHighlight={true}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing checkHighlight 2`] = `
<Line
  borderRadius={null}
  checkHighlight={false}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing checkHighlight 3`] = `
<Line
  borderRadius={null}
  checkHighlight={false}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing checkHighlight 4`] = `
<Line
  borderRadius={null}
  checkHighlight={true}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing checkSpaces 1`] = `
<Line
  borderRadius={null}
  checkSpaces={true}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing checkSpaces 2`] = `
<Line
  borderRadius={null}
  checkSpaces={false}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing checkSpaces 3`] = `
<Line
  borderRadius={null}
  checkSpaces={false}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing checkSpaces 4`] = `
<Line
  borderRadius={null}
  checkSpaces={true}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing className 1`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi my-classname"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema 1`] = `
<Line
  borderRadius={null}
  className="color-schema-default uublocklayout-1unjvdi"
  colorSchema="default"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema 2`] = `
<Line
  borderRadius={null}
  className="color-schema-red uublocklayout-1unjvdi"
  colorSchema="red"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema 3`] = `
<Line
  borderRadius={null}
  className="color-schema-red uublocklayout-1unjvdi"
  colorSchema="red"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema 4`] = `
<Line
  borderRadius={null}
  className="color-schema-red-rich uublocklayout-1unjvdi"
  colorSchema="red-rich"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema 5`] = `
<Line
  borderRadius={null}
  className="color-schema-red-rich uublocklayout-1unjvdi"
  colorSchema="red-rich"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema 6`] = `
<Line
  borderRadius={null}
  className="color-schema-green uublocklayout-1unjvdi"
  colorSchema="green"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema 7`] = `
<Line
  borderRadius={null}
  className="color-schema-green uublocklayout-1unjvdi"
  colorSchema="green"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema 8`] = `
<Line
  borderRadius={null}
  className="color-schema-green-rich uublocklayout-1unjvdi"
  colorSchema="green-rich"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema 9`] = `
<Line
  borderRadius={null}
  className="color-schema-green-rich uublocklayout-1unjvdi"
  colorSchema="green-rich"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema 10`] = `
<Line
  borderRadius={null}
  className="color-schema-yellow uublocklayout-1unjvdi"
  colorSchema="yellow"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema 11`] = `
<Line
  borderRadius={null}
  className="color-schema-yellow uublocklayout-1unjvdi"
  colorSchema="yellow"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema 12`] = `
<Line
  borderRadius={null}
  className="color-schema-yellow-rich uublocklayout-1unjvdi"
  colorSchema="yellow-rich"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema 13`] = `
<Line
  borderRadius={null}
  className="color-schema-yellow-rich uublocklayout-1unjvdi"
  colorSchema="yellow-rich"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema 14`] = `
<Line
  borderRadius={null}
  className="color-schema-purple uublocklayout-1unjvdi"
  colorSchema="purple"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema 15`] = `
<Line
  borderRadius={null}
  className="color-schema-purple uublocklayout-1unjvdi"
  colorSchema="purple"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema 16`] = `
<Line
  borderRadius={null}
  className="color-schema-purple-rich uublocklayout-1unjvdi"
  colorSchema="purple-rich"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema 17`] = `
<Line
  borderRadius={null}
  className="color-schema-purple-rich uublocklayout-1unjvdi"
  colorSchema="purple-rich"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema 18`] = `
<Line
  borderRadius={null}
  className="color-schema-brown uublocklayout-1unjvdi"
  colorSchema="brown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema 19`] = `
<Line
  borderRadius={null}
  className="color-schema-brown uublocklayout-1unjvdi"
  colorSchema="brown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema 20`] = `
<Line
  borderRadius={null}
  className="color-schema-brown-rich uublocklayout-1unjvdi"
  colorSchema="brown-rich"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema 21`] = `
<Line
  borderRadius={null}
  className="color-schema-brown-rich uublocklayout-1unjvdi"
  colorSchema="brown-rich"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema 22`] = `
<Line
  borderRadius={null}
  className="color-schema-orange uublocklayout-1unjvdi"
  colorSchema="orange"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema 23`] = `
<Line
  borderRadius={null}
  className="color-schema-orange uublocklayout-1unjvdi"
  colorSchema="orange"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema 24`] = `
<Line
  borderRadius={null}
  className="color-schema-orange-rich uublocklayout-1unjvdi"
  colorSchema="orange-rich"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema 25`] = `
<Line
  borderRadius={null}
  className="color-schema-orange-rich uublocklayout-1unjvdi"
  colorSchema="orange-rich"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema 26`] = `
<Line
  borderRadius={null}
  className="color-schema-cyan uublocklayout-1unjvdi"
  colorSchema="cyan"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema 27`] = `
<Line
  borderRadius={null}
  className="color-schema-cyan uublocklayout-1unjvdi"
  colorSchema="cyan"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema 28`] = `
<Line
  borderRadius={null}
  className="color-schema-cyan-rich uublocklayout-1unjvdi"
  colorSchema="cyan-rich"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema 29`] = `
<Line
  borderRadius={null}
  className="color-schema-cyan-rich uublocklayout-1unjvdi"
  colorSchema="cyan-rich"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema 30`] = `
<Line
  borderRadius={null}
  className="color-schema-grey uublocklayout-1unjvdi"
  colorSchema="grey"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema 31`] = `
<Line
  borderRadius={null}
  className="color-schema-grey uublocklayout-1unjvdi"
  colorSchema="grey"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema 32`] = `
<Line
  borderRadius={null}
  className="color-schema-grey-rich uublocklayout-1unjvdi"
  colorSchema="grey-rich"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema 33`] = `
<Line
  borderRadius={null}
  className="color-schema-grey-rich uublocklayout-1unjvdi"
  colorSchema="grey-rich"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema 34`] = `
<Line
  borderRadius={null}
  className="color-schema-pink uublocklayout-1unjvdi"
  colorSchema="pink"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema 35`] = `
<Line
  borderRadius={null}
  className="color-schema-pink uublocklayout-1unjvdi"
  colorSchema="pink"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema 36`] = `
<Line
  borderRadius={null}
  className="color-schema-pink-rich uublocklayout-1unjvdi"
  colorSchema="pink-rich"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema 37`] = `
<Line
  borderRadius={null}
  className="color-schema-pink-rich uublocklayout-1unjvdi"
  colorSchema="pink-rich"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema 38`] = `
<Line
  borderRadius={null}
  className="color-schema-pink uublocklayout-1unjvdi"
  colorSchema="pink"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing content 1`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={12345}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing content 2`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content="This is Content from ContentMixin"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing content 3`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content="This is Content from ContentMixin"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing content 4`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={12345}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing controlled 1`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing controlled 2`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing controlled 3`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing controlled 4`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing default props 1`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing disabled 1`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={true}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing disabled 2`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing disabled 3`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing disabled 4`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={true}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing dynamic 1`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={true}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing dynamic 2`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing dynamic 3`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing dynamic 4`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={true}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing hidden 1`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={true}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing hidden 2`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing hidden 3`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing hidden 4`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={true}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing id 1`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="myId-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing ignoreHTML 1`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreHTML={true}
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing ignoreHTML 2`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreHTML={false}
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing ignoreHTML 3`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreHTML={false}
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing ignoreHTML 4`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreHTML={true}
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing mainAttrs 1`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing name 1`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name="myName-inner"
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing nestingLevel 1`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="spa"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing nestingLevel 2`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="container"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing nestingLevel 3`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="container"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing nestingLevel 4`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="page"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing nestingLevel 5`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="page"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing nestingLevel 6`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing nestingLevel 7`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing nestingLevel 8`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBox"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing nestingLevel 9`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBox"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing nestingLevel 10`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="boxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing nestingLevel 11`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="boxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing nestingLevel 12`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="box"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing nestingLevel 13`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="box"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing nestingLevel 14`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="smallBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing nestingLevel 15`] = `""`;

exports[`UU5.BlockLayout.Line props testing nestingLevel 16`] = `""`;

exports[`UU5.BlockLayout.Line props testing nestingLevel 17`] = `""`;

exports[`UU5.BlockLayout.Line props testing nestingLevel 18`] = `""`;

exports[`UU5.BlockLayout.Line props testing nestingLevel 19`] = `""`;

exports[`UU5.BlockLayout.Line props testing nestingLevel 20`] = `""`;

exports[`UU5.BlockLayout.Line props testing noIndex 1`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi uu5-noindex"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={true}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing noIndex 2`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing noIndex 3`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing noIndex 4`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi uu5-noindex"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={true}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing pureRender 1`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={true}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing pureRender 2`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing pureRender 3`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing pureRender 4`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={true}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing selected 1`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={true}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing selected 2`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing selected 3`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing selected 4`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={true}
  size="s"
  style={null}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing style 1`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing style 2`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing style 3`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing style 4`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing textCorrector 1`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  textCorrector={true}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing textCorrector 2`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  textCorrector={false}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing textCorrector 3`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  textCorrector={false}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing textCorrector 4`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  textCorrector={true}
  tooltip={null}
  vertical={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing tooltip 1`] = `
<Line
  borderRadius={null}
  className="uublocklayout-1unjvdi"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "title": "My Tooltip",
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="s"
  style={null}
  tooltip="My Tooltip"
  vertical={false}
/>
`;
